<resources>
    <string name="app_name">My Application</string>
    <string name="Historique">Historique</string>
    <string name="Proteine">Proteine</string>
    <string name="Glucide">Glucide</string>
    <string name="Calories">Calories</string>
    <string name="Profil">Profil</string>
    <string name="Calandrier">Calandrier</string>
    <string name="Repas">Repas</string>
    <string name="Petitdejeuner">Petit déjeuner</string>
    <string name="Dejeuner">Déjeuner</string>
    <string name="Diner">Dîner</string>
    <string name="Encas">En-cas</string>
    <string name="produitnonajouter">Aucun produit ajouté</string>
    <string name="scanner">Scanner</string>

    <string-array name="niveau_activite">
        <item>Sédentaire</item>
        <item>Léger</item>
        <item>Modéré</item>
        <item>Intense</item>
        <item>Très Intense</item>
    </string-array>

</resources>